--- a/src/add/css/home.css
+++ b/src/add/css/home.css
@@ -145,3 +145,10 @@ textarea {
 .grid-item:hover {
     background-color: #343e7c;
 }
+
+@media screen and (max-width: 600px) {
+    .nav-icons {
+        width: 50px;
+        height: 50px;
+    }
+}
