--- a/src/add/css/online.css
+++ b/src/add/css/online.css
@@ -4,15 +4,16 @@
     align-items: center;
     justify-content: center;
     margin: 0 auto;
-    margin-top: 2rem;
+    margin-bottom: 0.5rem;
     border-radius: 10px;
-    margin-bottom: 5rem;
     width: 90%;
 }
 
-.container-online-users h1 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+.container-online-users p {
+    display: flex;
+    font-size: 1rem;
+    gap: 5px;
+    color: #333333;
 }
 
 .container-online-users ul {
