--- a/src/add/css/header.css
+++ b/src/add/css/header.css
@@ -2,12 +2,38 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    background-color: #2c3e50;
+    width: fit-content;
+    background-image: linear-gradient(120deg, #27385b 0%, #4592a0 100%);
     color: white;
     padding: 1rem;
+    margin: auto;
     text-align: center;
+    border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border: 2px solid transparent;
+    animation: borderAnim 5s ease-in-out infinite;
+}
+
+@keyframes borderAnim {
+    0% {
+        border-color: #ffc107;
+    }
+
+    25% {
+        border-color: #ffc107 #ff9800 #ffc107 #ff9800;
+    }
+
+    50% {
+        border-color: #00fffb #07ff55 #005eff #a007ff;
+    }
+
+    75% {
+        border-color: #ff9800 #ff9800 #ffc107 #ffc107;
+    }
+
+    100% {
+        border-color: #e207ff;
+    }
 }
 
 .header h1 {
