--- a/src/add/css/home.css
+++ b/src/add/css/home.css
@@ -127,9 +127,9 @@ textarea {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 48%;
-    height: 40%;
-    background-color: #4c59af;
+    width: 49%;
+    height: 45%;
+    background-color: #27385b;
     color: white;
     font-size: 2rem;
     text-decoration: none;
@@ -143,7 +143,7 @@ textarea {
 }
 
 .grid-item:hover {
-    background-color: #343e7c;
+    background-color: #35488de3;
 }
 
 @media screen and (max-width: 600px) {
